# CMake-Simple-Example

./: README.md
Example 1/: CMakeList.txt~  CMakeLists.txt  CMakeLists.txt~
Example 1/include/: Player.h~
Example 1/src/: Main.cpp  Player.cpp~  Team.cpp
Example 2/: CMakeLists.txt
Example 2/include/: Player.h  Team.h
Example 2/src/: Player.cpp
